# rubcs

./: .gitignore  CMakeLists.txt  README.md
.plan/: TODO.md
shaders/: bg.frag  bg.vert  cube.frag  cube.vert
src/: cube.cpp  cube.h  font.cpp  font.h  main.cpp  renderer.cpp  renderer.h  solver.cpp  solver.h
tests/: test_main.cpp
